--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
                 <h1><a href=""><img src="" alt=""></a></h1><!-- 카카오 뱅크 로고 -->
             </div>
             <div class="h_nav">
-                <button> <a href=".landing">회사소개</a></button>
-                <button>계좌이체</button>
-                <button>예금/적금</button>
-                <button>26주 적금</button>
-                <button>체크카드</button>
-                <button>해외송금</button>
-                <button>IT금융</button>
+                <button> <a href="#landing">회사소개</a></button>
+                <button> <a href="#con1">계좌이체</a></button>
+                <button> <a href="#con2">예금/적금</a></button>
+                <button> <a href="#con3">26주 적금</a></button>
+                <button> <a href="#con4">체크카드</a></button>
+                <button> <a href="#con5">해외송금</a></button>
+                <button> <a href="#con6">IT금융</a></button>
             </div>
         </div>
 
         <div class="content">
-            <div class="landing"><!-- 랜딩 페이지 -->
+            <div id="landing"><!-- 랜딩 페이지 -->
                 <div class="b_img">
                     <img src="" alt="">
                     <h1>이미 모두의 은행 <br>지금은 카카오뱅크</h1>
@@ -40,7 +40,7 @@
 
             </div>
 
-            <div class="con1"><!-- 계좌이체 -->
+            <div id="con1"><!-- 계좌이체 -->
                 <div class="title_txt">
                     <p>모바일 계좌</p>
                     <h1>모바일로 더 손쉬운 계좌 개설,<br>간편한 이체</h1>
@@ -60,7 +60,7 @@
             </div> 
 
 
-            <div class="con2"><!-- 예적금 -->
+            <div id="con2"><!-- 예적금 -->
                 <div class="title_txt">
                     <p>예금 · 적금</p>
                     <h1>우대조건 없이 <br>합리적인 예금과 적금</h1>
@@ -108,7 +108,7 @@
             </div> 
 
 
-            <div class="con3"><!-- 26주 적금 인터랙션-->
+            <div id="con3"><!-- 26주 적금 인터랙션-->
                 <div class="title_txt">
                     <p>26주 적금 챌린지</p>
                     <h1>함께 도전해서<br>재미있는 26주 적금</h1>
@@ -122,7 +122,7 @@
             </div> 
 
 
-            <div class="con4"> <!-- 체크카드 인터랙션 -->
+            <div id="con4"> <!-- 체크카드 인터랙션 -->
                 <div class="title_txt">
                     <h1><span>프렌즈 체크카드</span><br>내가 고르는 선택의 즐거움</h1>
                     <p>프렌즈 디자인부터 멋스러운 블랙 컬러 카드까지 프렌즈 친구들이 함께합니다.</p>
@@ -137,7 +137,7 @@
             </div>  
 
 
-            <div class="con5"><!-- 해외 계좌 송금 /가능하면 서류제출페이지 까지 -->
+            <div id="con5"><!-- 해외 계좌 송금 /가능하면 서류제출페이지 까지 -->
                 <div class="con5_box1">
                     <h1>해외계좌송금과 <br>
                         WU빠른해외송금을 <br>
@@ -159,7 +159,7 @@
                     </div><!-- 버튼과 연결되면서 이미지들이 로딩되게 -->
                 </div>
             </div> 
-            <div class="con6"><!-- IT 금융 -->
+            <div id="con6"><!-- IT 금융 -->
                 <h1>IT 기술로 카카오뱅크를 <br>
                     만들어 갑니다.</h1>
                 <div class="con6_box">
