--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
                 </div>
                 <div class="h_nav">
                     <ul>
-                    <li><a href="#landing">회사소개</a></li>
-                    <li><a href="#landing">예금/적금</a></li>
-                    <li><a href="#landing">26주 적금</a></li>
-                    <li><a href="#landing">체크카드</a></li>
-                    <li><a href="#landing">해외송금</a></li>
-                    <li><a href="#landing">IT금융</a></li>
+                        <li><a href="#landing">회사소개</a></li>
+                        <li><a href="#con1">예금/적금</a></li>
+                        <li><a href="#con2">26주 적금</a></li>
+                        <li><a href="#con3">체크카드</a></li>
+                        <li><a href="#con4">해외송금</a></li>
+                        <li><a href="#con5">IT금융</a></li>
                     </ul>
                 </div>
             
@@ -32,18 +32,21 @@
         <div id="content">
             <div id="landing"><!-- 랜딩 페이지 -->
                 <div class="b_img">
-                    <img src="" alt=""> 
-                    <video src="image/Main_KV_2line_ko.mp4" autoplay muted loop></video>
+                    <img src="image/img_friends.png" width="20%" height="20%" alt=""> 
+                    <img src="image/img_niniz.png" width="40%" height="40%" alt=""> 
+                </div>
+                    <!-- <video src="image/Main_KV_2line_ko.mp4" autoplay muted loop></video> -->
+                <div class="main_txt">
                     <h1>이미 모두의 은행 <br>지금은 카카오뱅크</h1>
-                    <button><img src="" alt=""> Google Play</button><!-- 구글플레이 로고 -->
-                    <button><img src="" alt=""> App store</button><!-- 앱스토어 로고 -->
+                    <button><img src=""> Google Play</button><!-- 구글플레이 로고 -->
+                    <button><img src=""> App store</button><!-- 앱스토어 로고 -->
                 </div>
+                
+            </div>
 
-                <div class="txtbox">
-                <h2>일상에서 더 쉽게, <br> 더 자주 이용하는 나만의 은행.</h2>
-                <h2><span>보내고, 받고, 모으고, 쓰는</span><br>당신의 모든 일이 바뀌고 있습니다.</h2>
-                </div>
-
+            <div class="txtbox">
+                <p>일상에서 더 쉽게, <br> 더 자주 이용하는 나만의 은행.</p>
+                <p class="under"><span>보내고, 받고, 모으고, 쓰는</span><br>당신의 모든 일이 바뀌고 있습니다.</p>
             </div>
 
             <div class="#con1"><!-- 계좌이체 -->
