--- a/index.html
+++ b/index.html
@@ -49,31 +49,32 @@
                 <p class="under"><span>보내고, 받고, 모으고, 쓰는</span><br>당신의 모든 일이 바뀌고 있습니다.</p>
             </div>
 
-            <div class="#con1"><!-- 계좌이체 -->
+            <div id="con1"><!-- 계좌이체 -->
                 <div class="title_txt">
                     <p>모바일 계좌</p>
-                    <h1>모바일로 더 손쉬운 계좌 개설,<br>간편한 이체</h1>
+                    <h1>모바일로 더 손쉬운 <br> 계좌 개설,<br>간편한 이체</h1>
                 </div>
                 <div class="phone">
-                    <div class="L_img"><img src="" alt=""></div>
-                    <div class="R_img"><img src="" alt=""></div>
+                    <div class="L_img"><div class="imgbox"></div><img src="" alt=""></div>
+                    <div class="R_img"><div class="imgbox"></div><img src="" alt=""></div>
+                    <div class="txt1">
+                        <p>인증서, OTP 없이 계좌 개설이 간편합니다. <br>
+                            여러 건의 이체도 몇 번의 터치로 <br>
+                            손쉽게 송금 할 수 있습니다.
+                        </p>
+                        <button>카카오뱅크 입출금통장 ></button>
+                    </div>
                 </div>
-                <div class="txt1">
-                    <p>인증서, OTP 없이 계좌 개설이 간편합니다. <br>
-                        여러 건의 이체도 몇 번의 터치로 <br>
-                        손쉽게 송금 할 수 있습니다.
-                    </p>
-                    <button>카카오뱅크 입출금통장 ></button>
-                </div>
+                
 
             </div> 
 
 
-            <div class="#con2"><!-- 예적금 -->
+            <div id="con2"><!-- 예적금 -->
                 <div class="title_txt">
                     <p>예금 · 적금</p>
                     <h1>우대조건 없이 <br>합리적인 예금과 적금</h1>
-                    <p>기대했던 금리와 다르게 복잡한 우대조건에 실망한 적이 있었나요? <br>
+                    <p class="sub_p">기대했던 금리와 다르게 복잡한 우대조건에 실망한 적이 있었나요? <br>
                         카카오뱅크의 예금, 적금은 숨겨진 우대조건 없이 <br>
                         누구에게나 편리하고 합리적입니다.</p>
                 </div>
@@ -92,7 +93,7 @@
                 <div class="con2_subbox1">
                     <p>정기예금</p>
                     <h1>1개월 만기도 가능한 예금</h1>
-                    <p>아주 짧은 기간이라도 정기예금을 활용하면 효율적입니다. <br>
+                    <p class="sub_p">아주 짧은 기간이라도 정기예금을 활용하면 효율적입니다. <br>
                         최소 1개월부터 최대 36개월까지. <br>
                         내가 원하는 만기날짜를 선택하여 가입할 수 있습니다.</p>
 
@@ -104,7 +105,7 @@
                 <div class="con2_subbox2">
                     <p>자유적금</p>
                     <h1>매일, 매주, 매월 <br>원하는 주기로</h1>
-                    <p>자동이체로 적금 납입을 설정하시면, 안정적으로 적금 운용이 가능합니다. <br> 
+                    <p class="sub_p">자동이체로 적금 납입을 설정하시면, 안정적으로 적금 운용이 가능합니다. <br> 
                         적은 금액을 원하는금액과 기간을 설정하여 이용해보세요.</p>
 
                     <div class="but_sub_box2">
@@ -117,7 +118,7 @@
             </div> 
 
 
-            <div class="#con3"><!-- 26주 적금 인터랙션-->
+            <div id="con3"><!-- 26주 적금 인터랙션-->
                 <div class="title_txt">
                     <p>26주 적금 챌린지</p>
                     <h1>함께 도전해서<br>재미있는 26주 적금</h1>
@@ -131,7 +132,7 @@
             </div> 
 
 
-            <div class="#con4"> <!-- 체크카드 인터랙션 -->
+            <div id="con4"> <!-- 체크카드 인터랙션 -->
                 <div class="title_txt">
                     <h1><span>프렌즈 체크카드</span><br>내가 고르는 선택의 즐거움</h1>
                     <p>프렌즈 디자인부터 멋스러운 블랙 컬러 카드까지 프렌즈 친구들이 함께합니다.</p>
@@ -146,7 +147,7 @@
             </div>  
 
 
-            <div class="#con5"><!-- 해외 계좌 송금 /가능하면 서류제출페이지 까지 -->
+            <div id="con5"><!-- 해외 계좌 송금 /가능하면 서류제출페이지 까지 -->
                 <div class="con5_box1">
                     <h1>해외계좌송금과 <br>
                         WU빠른해외송금을 <br>
@@ -168,7 +169,7 @@
                     </div><!-- 버튼과 연결되면서 이미지들이 로딩되게 -->
                 </div>
             </div> 
-            <div class="#con6"><!-- IT 금융 -->
+            <div id="con6"><!-- IT 금융 -->
                 <h1>IT 기술로 카카오뱅크를 <br>
                     만들어 갑니다.</h1>
                 <div class="con6_box">
@@ -191,7 +192,7 @@
             
 
         </div>
-        <div class="footer">
+        <div id="footer">
 
         </div>
 
