--- a/index.html
+++ b/index.html
@@ -122,12 +122,14 @@
                 <div class="title_txt">
                     <p>26주 적금 챌린지</p>
                     <h1>함께 도전해서<br>재미있는 26주 적금</h1>
-                    <p>26주동안 변화하는 재미에 빠져있는 사이 <br>어느덧 만기 달성 경험을 맛보게 됩니다.</p>
+                    <p class="sub_p">26주동안 변화하는 재미에 빠져있는 사이 <br>어느덧 만기 달성 경험을 맛보게 됩니다.</p>
+                    <button>바로가기 ></button>
                 </div>
                 <div class="phone">
                     <div class="L_img"><img src="" alt=""></div>
+                    
                 </div>
-                <button>카카오뱅크 입출금통장 ></button>
+                
 
             </div> 
 
