--- a/index.html
+++ b/index.html
@@ -229,21 +229,21 @@
 
             <div id="con7"><!-- IT 금융 -->
                 <div class="con7txtbox">
-                    <h1>IT 기술로 카카오뱅크를 <br>만들어 갑니다.</h1>
-                    <div class="con7_box">
-                        <div class="circle">
+                    <h1 data-aos="fade-down" data-aos-delay="200">IT 기술로 카카오뱅크를 <br>만들어 갑니다.</h1>
+                    <div  class="con7_box">
+                        <div data-aos="fade-right" data-aos-delay="400" data-aos-duration="1000" class="circle">
                             <div class="tbox">
                                 <h3>간결하고 유리하게</h3>
                                 <p>작은 모바일 화면에 적합하도록 <br>복잡함을 덜어낸 <br>유려하고 친화적인 UX</p>
                             </div>
                         </div>
-                        <div class="circle">
+                        <div data-aos="fade-right" data-aos-delay="600" data-aos-duration="1000" class="circle">
                             <div class="tbox2">
                                 <h3>간편한 인증,<br>철저한 보안</h3>
                                 <p>지문, 비밀번호로 간편한 인증 <br>IT 기술의 강력한 보안 검증과 <br> 데이터 암호화</p>
                             </div>
                         </div>
-                        <div class="circle">
+                        <div data-aos="fade-right" data-aos-delay="800" data-aos-duration="1000" class="circle">
                             <div class="tbox">
                                 <h3>Mobile First, One App</h3>
                                 <p>모바일에서 뱅킹이 더 쉽고 편리하게 <br> 여러 앱을 설치할 필요 없이 <br>하나의 앱으로</p>
