--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         color: #fff;
         background-color: #ff4136;
         border: none;
-        border-radius: 30px;
+        border-radius: 40%;
         cursor: pointer;
         overflow: hidden;
         transition: all 0.3s ease;
